--- a/style.css
+++ b/style.css
@@ -86,3 +86,74 @@ h2 {
     font-size: 32px;
     font-weight: 400;
 }
+
+
+@media (min-width: 768px) and (max-width: 1400px) {
+    body {
+        justify-content: flex-start; 
+    }
+
+    .container {
+        width: 100%; 
+        flex-direction: column; 
+        height: auto; 
+    }
+
+    .container__conteudo {
+        position: static; 
+        margin-top: 20px; 
+    }
+
+    .container__informacoes {
+        padding: 10px; 
+    }
+
+    h1 {
+        font-size: 36px; 
+    }
+}
+
+@media (min-width: 390px) and (max-width: 767px) {
+    body {
+        justify-content: flex-start;
+    }   
+
+    .container {
+        width: 100%;
+        flex-direction: column;
+        height: auto;
+        padding: 10px; 
+        border: none; 
+        box-shadow: none; 
+        background-image: block; 
+    }
+
+    .container__conteudo {
+        position: static;
+        margin-top: 10px; 
+    }
+
+    .container__informacoes {
+        padding: 10px;
+    }
+
+    h1 {
+        font-size: 24px; 
+    }
+
+    h2 {
+        font-size: 20px; 
+    }
+
+    .container__botao {
+        padding: 12px 20px; 
+        font-size: 18px; 
+    }
+   
+    .container__imagem-robo{
+        display: none;
+    }
+}
+  
+
+  
